--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Bienvenido a la doc de Avanze
+description: Guía de documentación de la organización de Avanze Soluciones.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Toda la documentación según la organización seleccionada!
   image:
     file: ../../assets/houston.webp
   actions:
