integración con los tipos de supabase

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -15,10 +15,16 @@ hero:
       icon: external
       variant: minimal
 ---
+import { supabase } from '../../lib/supabase';
+
+const { data: { user } } = await supabase.auth.getUser();
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
 ## Next steps
+
+user ? 
+(
 
 <CardGrid stagger>
 	<Card title="Update content" icon="pencil">
@@ -34,3 +40,12 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		Learn more in [the Starlight Docs](https://starlight.astro.build/).
 	</Card>
 </CardGrid>
+) : (
+    <div class="text-center py-8">
+      <h2 class="text-xl font-bold mb-4">Acceso Restringido</h2>
+      <p class="mb-4">Debes iniciar sesión para acceder a la documentación.</p>
+      <a href="/login" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+        Iniciar Sesión
+      </a>
+    </div>
+)	
