--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -15,32 +15,27 @@ hero:
       icon: external
       variant: minimal
 ---
+
+---
+// src/content/docs/index.mdx
 import { supabase } from '../../lib/supabase';
 
-const { data: { user } } = await supabase.auth.getUser();
-
-import { Card, CardGrid } from '@astrojs/starlight/components';
-
-## Next steps
-
-user ? 
-(
+// Obtener usuario de forma compatible con MDX
+const { data } = await supabase.auth.getUser();
+const user = data?.user;
+---
 
 <CardGrid stagger>
+  {user ? (
+    
+
+   
+
+    
 	<Card title="Update content" icon="pencil">
 		Edit `src/content/docs/index.mdx` to see this page change.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
-) : (
+  ) : (
     <div class="text-center py-8">
       <h2 class="text-xl font-bold mb-4">Acceso Restringido</h2>
       <p class="mb-4">Debes iniciar sesión para acceder a la documentación.</p>
@@ -48,4 +43,5 @@ user ?
         Iniciar Sesión
       </a>
     </div>
-)	
+  )}
+</CardGrid>
