Prueba integrando supabase desde cliente para autentificar (sin middleware)

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,8 +10,8 @@ hero:
     - text: Example Guide
       link: /guides/example/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Acceder
+      link: /signin
       icon: external
       variant: minimal
 ---
